Now comments and photo have the username as well
