# service/api/get-my-stream.go
@@ -30,7 +30,7 @@ func (rt *_router) getMyStream(w http.ResponseWriter, r *http.Request, ps httpro
 	}
 
 	// Call the function to change the name
-	dbPhotos, err := rt.db.GetStream(id)
+	dbPhotos, username, err := rt.db.GetStream(id)
 	if err != nil {
 		if errors.Is(err, sql.ErrNoRows) {
 			ctx.Logger.WithError(err).Error("User not found")
@@ -53,7 +53,7 @@ func (rt *_router) getMyStream(w http.ResponseWriter, r *http.Request, ps httpro
 			w.WriteHeader(http.StatusInternalServerError)
 			return
 		}
-		photo.PhotoFromDatabase(p, comments, likes)
+		photo.PhotoFromDatabase(p, comments, likes, username)
 		photos = append(photos, photo)
 	}
 
